#8 search is done

--- a/cvManager/View/CondidateView.xaml
+++ b/cvManager/View/CondidateView.xaml
@@ -28,11 +28,13 @@
                         VerticalAlignment="Top"
                         Grid.Column="0">
                 <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="{StaticResource plainTextColor3}"/>
-                <TextBox Text="Search..."   
-                    FontSize="13"
-                         Height="24"
-                           Width="300"
-                           Background="Transparent"
+                <TextBox Text="{Binding SearchString  , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         
+                    
+                            FontSize="13"
+                            Height="24"
+                            Width="300"
+                            Background="Transparent"
                              FontWeight="Medium"
                              FontFamily="Montserrat"                            
                              Foreground="{StaticResource plainTextColor3}"
@@ -40,10 +42,10 @@
                              BorderBrush="{StaticResource plainTextColor3}"
                              BorderThickness="0,0,0,1"                             
                              VerticalContentAlignment="Center"
-                             Margin="5,5,0,0"></TextBox>
+                             Margin="5,5,0,0"/>
             </StackPanel>
             <Button Grid.Column="1"
-                            Command=""                            
+                            Command="{Binding SearchCommand}"                            
                             Content="Search"                            
                             FontSize="12"
                             FontFamily="Montserrat"
